2005-11-25 Jim Garlick <garlick@speakeasy.net>

  * src/hptodino.c: Forgot to update for new freqstr() prototype.  Fixed.

  * man/hptodino.1: New.

  * man/hptopbm.1: Added reference to thinkjettopbm(1), though it doesn't seem
    to work with hp1630 screen dumps.

2005-11-20 Jim Garlick <garlick@speakeasy.net>

  * man/hp8656.1: New.

  * man/hp3457.1: Updated to refect changes in the code.

  * examples/gpib.conf: added dg535 and hp8656 instruments.

  * src/hp3457.c: A lot of changes related to allowing the instrument
  state to persist across invocations, e.g. so we can run it from scripts
  where it is invoked multiple times.

  * examples/scripts: New.

  * htdocs: replaced discharging battery example with RC filter freq
  response example.  Added hp8656 links.

  * : tag gpib-utils-1-1

2005-10-23 Jim Garlick <garlick@speakeasy.net>

  * src/freq.c, src/ampl.c: cleanup.

2005-10-21 Jim Garlick <garlick@speakeasy.net>

  * src/hp8656.[ch]: New.

  * htdocs: New (the sf web pages).

2005-10-14 Jim Garlick <garlick@speakeasy.net>

  * : tag gpib-utils-1-0

2005-09-30 Jim Garlick <garlick@speakeasy.net>

  * : housecleaning prior to release as sourceforge gpib-utils project.

2005-07-14 Jim Garlick <garlick@speakeasy.net>

  * r1500.[ch], wrappers.[ch], sd6031.[ch]: removed.

  * freq.c: added

  * hptodino.c: added

2005-07-05 Jim Garlick <garlick@speakeasy.net>

  * : moved to home subversion repo.

2005-04-14 Jim Garlick <garlick@speakeasy.net>

  * r5005.c: removed serial poll (called in _ibtrg) from inside 
    sample loop.  ibrsp was occasionally failing with error 0.

2005-04-08 Jim Garlick <garlick@speakeasy.net>

  * r5005.1: New.

  * hp3455.1: New.

  * hp1630.1: New.

  * hp1630.c: update for linux-gpib.  Removed wrappers.[ch] dependency.

  * r5005.c: revamped based on manual and HP DVM experience.  Removed
     wrappers.[ch] dependency.

2005-04-04 Jim Garlick <garlick@speakeasy.net>
